Fixed the refresh interval, set some font sytling, set the purge to 1 day

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -2,6 +2,11 @@ body {
     background: url("/img/black_twill.png");
 }
 
+dataTables_wrapper {
+    font-size:14px;
+    font-family:Verdana;
+}
+
 .wrapper {
     border-radius: 5px;
     border:1px solid black;
