Basic top graph is there, getting data.  Timestamps are a little jacked though

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -16,3 +16,10 @@ body {
     position: relative;
     padding: 20px;
 }
+
+
+#topGraph {
+    background-color: white;
+    width:600px;
+    height:300px;
+}
