--- a/html/css/base.css
+++ b/html/css/base.css
@@ -19,9 +19,11 @@ body {
 
 
 #topGraph {
-    background-color: white;
     width:100%;
     height:200px;
+}
+
+#talkerGrid {
 }
 
 .tickLabel, .legendLabel {
