Basic talker grid working
It's ugly, and needs some more styling, but it appears to work.  Global
refresh at the moment.

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -7,14 +7,9 @@ body {
     font-family:Verdana;
 }
 
-.wrapper {
+.content {
     border-radius: 5px;
-    border:1px solid black;
     background-color: white;
-    margin:10px auto;
-    width:90%;
-    position: relative;
-    padding: 20px;
 }
 
 
@@ -24,6 +19,14 @@ body {
 }
 
 #talkerGrid {
+}
+
+.gridItem {
+    background-color: white;
+}
+
+.gridItem > h3 {
+    padding-left: 1em;
 }
 
 .tickLabel, .legendLabel {
