Top align external name in talker grid
Move the external name in the talker grid to the top.  Not
sure if this is a great method of doing it, but it works.  I am
not a CSS master.  :)

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -56,7 +56,8 @@ body {
 }
 
 .external_ip_name {
-    float:right;
+    /*float:right;*/
+    margin-top:-14px;
     text-align: right;
     margin-left: 5em;
     margin-right: 2px;
