[checkpoint] basic json cycle for talker graphs working
This isn't complete but contains the basic working skeleton of
retrieving the talker graph data.  Still needs to cook the data for
query spark lines, hook up the graphs etc.  Basic positioning of the
graph div etc.

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -62,6 +62,12 @@ body {
     white-space: nowrap;
 }
 
+.talker_graph {
+    width: 100%;
+    text-align: center;
+    border-top: 1px solid #e2eef4;
+}
+
 .tickLabel, .legendLabel {
     font-family: Verdana, Geneva, sans-serif;
     font-size: 70%;
